src/utils/xcbutils.h
@@ -48,7 +48,7 @@ QRectF KWIN_EXPORT nativeFloor(const QRectF &value);
 static void defineCursor(xcb_window_t window, xcb_cursor_t cursor);
 static void setInputFocus(xcb_window_t window, uint8_t revertTo = XCB_INPUT_FOCUS_POINTER_ROOT, xcb_timestamp_t time = xTime());
 static void moveWindow(xcb_window_t window, const QPoint &pos);
-static void moveWindow(xcb_window_t window, uint32_t x, uint32_t y);
+static void moveWindow(xcb_window_t window, int32_t x, int32_t y);
 static void lowerWindow(xcb_window_t window);
 static void selectInput(xcb_window_t window, uint32_t events);
 
@@ -1919,7 +1919,7 @@ static inline void moveWindow(xcb_window_t window, const QPoint &pos)
     moveWindow(window, pos.x(), pos.y());
 }
 
-static inline void moveWindow(xcb_window_t window, uint32_t x, uint32_t y)
+static inline void moveWindow(xcb_window_t window, int32_t x, int32_t y)
 {
     const uint16_t mask = XCB_CONFIG_WINDOW_X | XCB_CONFIG_WINDOW_Y;
     const uint32_t values[] = {Xcb::toXNative(x), Xcb::toXNative(y)};
