src/workspace.cpp
@@ -3075,10 +3075,7 @@ void Workspace::fixPositionAfterCrash(xcb_window_t w, const xcb_get_geometry_rep
     NETStrut frame = i.frameExtents();
 
     if (frame.left != 0 || frame.top != 0) {
-        // left and top needed due to narrowing conversations restrictions in C++11
-        const uint32_t left = frame.left;
-        const uint32_t top = frame.top;
-        const uint32_t values[] = {Xcb::toXNative(geometry->x - left), Xcb::toXNative(geometry->y - top)};
+        const uint32_t values[] = {Xcb::toXNative(geometry->x - frame.left), Xcb::toXNative(geometry->y - frame.top)};
         xcb_configure_window(kwinApp()->x11Connection(), w, XCB_CONFIG_WINDOW_X | XCB_CONFIG_WINDOW_Y, values);
     }
 }
